# memory-wiki

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: deps.py  memory.py  transcripts.py
app/db/: models.py  session.py
app/llm/: client.py  errors.py  extractor.py  merger.py  prompts.py
app/schemas/: memory.py  transcript.py
app/storage/: frontmatter.py  memory_fs.py  object_store.py
app/worker/: main.py  queue.py  tasks.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_object_store.py  test_worker.py
tests/unit/: test_errors.py  test_fake_llm.py  test_frontmatter.py  test_memory_fs.py  test_merger.py  test_paths.py
